--- a/aplicacao/formulario.html
+++ b/aplicacao/formulario.html
@@ -22,8 +22,11 @@
 <style>
     @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 
+    @media (max-width: 700px) {
+        
     .bg-warning-2 {
         background: #eeb8233a;
+    }
     }
 
     .form-control:focus-within {
@@ -165,15 +168,15 @@
 
                         <div class="col-12 p-2 col-sm-6">
                             <div class="row rounded-3 rounded-3 bg-warning-2 p-2">
-                                <div class="col-8 col-sm-10 col-lg-12">
+                                <div class="col-8 col-sm-8 col-lg-12">
                                     <label for="" class="text-secondary">Nome completo</label>
                                     <input type="text" placeholder="Nome do elemento" class="w-100 form-control">
                                 </div>
-                                <div class="col-4 col-sm-2 col-lg-12">
+                                <div class="col-4 col-sm-4 col-lg-12">
                                     <label for="" class="text-secondary">Nasc.</label>
                                     <input type="date" class="form-control" name="" id="">
                                 </div>
-                                <div class="col-12 my-2">
+                                <div class="col-12 my-2 col-lg-12">
                                     <label for="" class="text-secondary">Função na Equipa</label>
                                     <input type="text" placeholder="Sua função na equipa" class="form-control">
                                 </div>
@@ -181,15 +184,15 @@
                         </div>
                         <div class="col-12 p-2 col-sm-6">
                             <div class="row rounded-3 rounded-3 bg-warning-2 p-2">
-                                <div class="col-8 col-sm-10 col-lg-12">
+                                <div class="col-8 col-sm-8 col-lg-12">
                                     <label for="" class="text-secondary">Nome completo</label>
                                     <input type="text" placeholder="Nome do elemento" class="w-100 form-control">
                                 </div>
-                                <div class="col-4 col-sm-2 col-lg-12">
+                                <div class="col-4 col-sm-4 col-lg-12">
                                     <label for="" class="text-secondary">Nasc.</label>
                                     <input type="date" class="form-control" name="" id="">
                                 </div>
-                                <div class="col-12 my-2">
+                                <div class="col-12 my-2 col-lg-12">
                                     <label for="" class="text-secondary">Função na Equipa</label>
                                     <input type="text" placeholder="Sua função na equipa" class="form-control">
                                 </div>
@@ -197,15 +200,15 @@
                         </div>
                         <div class="col-12 p-2 col-sm-6">
                             <div class="row rounded-3 rounded-3 bg-warning-2 p-2">
-                                <div class="col-8 col-sm-10 col-lg-12">
+                                <div class="col-8 col-sm-8 col-lg-12">
                                     <label for="" class="text-secondary">Nome completo</label>
                                     <input type="text" placeholder="Nome do elemento" class="w-100 form-control">
                                 </div>
-                                <div class="col-4 col-sm-2 col-lg-12">
+                                <div class="col-4 col-sm-4 col-lg-12">
                                     <label for="" class="text-secondary">Nasc.</label>
                                     <input type="date" class="form-control" name="" id="">
                                 </div>
-                                <div class="col-12 my-2">
+                                <div class="col-12 my-2 col-lg-12">
                                     <label for="" class="text-secondary">Função na Equipa</label>
                                     <input type="text" placeholder="Sua função na equipa" class="form-control">
                                 </div>
@@ -213,15 +216,15 @@
                         </div>
                         <div class="col-12 p-2 col-sm-6">
                             <div class="row rounded-3 rounded-3 bg-warning-2 p-2">
-                                <div class="col-8 col-sm-10 col-lg-12">
+                                <div class="col-8 col-sm-8 col-lg-12">
                                     <label for="" class="text-secondary">Nome completo</label>
                                     <input type="text" placeholder="Nome do elemento" class="w-100 form-control">
                                 </div>
-                                <div class="col-4 col-sm-2 col-lg-12">
+                                <div class="col-4 col-sm-4 col-lg-12">
                                     <label for="" class="text-secondary">Nasc.</label>
                                     <input type="date" class="form-control" name="" id="">
                                 </div>
-                                <div class="col-12 my-2">
+                                <div class="col-12 my-2 col-lg-12">
                                     <label for="" class="text-secondary">Função na Equipa</label>
                                     <input type="text" placeholder="Sua função na equipa" class="form-control">
                                 </div>
@@ -229,15 +232,15 @@
                         </div>
                         <div class="col-12 p-2 col-sm-6">
                             <div class="row rounded-3 rounded-3 bg-warning-2 p-2">
-                                <div class="col-8 col-sm-10 col-lg-12">
+                                <div class="col-8 col-sm-8 col-lg-12">
                                     <label for="" class="text-secondary">Nome completo</label>
                                     <input type="text" placeholder="Nome do elemento" class="w-100 form-control">
                                 </div>
-                                <div class="col-4 col-sm-2 col-lg-12">
+                                <div class="col-4 col-sm-4 col-lg-12">
                                     <label for="" class="text-secondary">Nasc.</label>
                                     <input type="date" class="form-control" name="" id="">
                                 </div>
-                                <div class="col-12 my-2">
+                                <div class="col-12 my-2 col-lg-12">
                                     <label for="" class="text-secondary">Função na Equipa</label>
                                     <input type="text" placeholder="Sua função na equipa" class="form-control">
                                 </div>
