--- a/aplicacao/formulario.html
+++ b/aplicacao/formulario.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARQUIVOS | CANAR</title>
+    <title>Formulario de Aplicação | CANAR</title>
     <link rel="shortcut icon" href="../img/logos/cnr2.png" type="image/x-icon">
     <script src="../src/js/jquery.js"></script>
     <script src="../src/js/jquery.min.js"></script>
