--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
         <div class="text-center animate__animated animate__flipInY bannerr p-3">
             <h1>Bem vindo ao </h1>
             <h1>Campeonato Nacional de Robótica</h1>
-            <a href="./formulario.html">
+            <a href="./aplicacao/">
                 <button class="btn btn-warning text-white">
                     Inscrição da equipa <i
                     class="bi bi-arrow-right-short"></i>
