--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CANAR | CANAR</title>
+    <title>Campeonato Nacional de Robótica | CANAR</title>
     <link rel="shortcut icon" href="./img/logos/cnr2.png" type="image/x-icon">
     <script src="./src/js/jquery.js"></script>
     <script src="./src/js/jquery.min.js"></script>
@@ -117,7 +117,7 @@
     .banner {
         background: linear-gradient(180deg, #0000003f, #0000005a), url("../img/team-done.jpg");
         background-repeat: no-repeat;
-        background-size: cover !important;
+        background-size: cover!important;
         background-position: center center;
         height: 80vh;
         display: grid;
@@ -282,7 +282,7 @@
         }
 
         .banner {
-            background-size: 100%;
+            background-size: cover;
         }
 
         .canar {
