--- a/aplicacao/index.html
+++ b/aplicacao/index.html
@@ -403,9 +403,9 @@
         .then(function(docRef) {
        
           alert("Equipe enviada com sucesso, entraremos em contacto em breve ");
-          setTimeout(()=>{
+         // setTimeout(()=>{
             location.reload();
-          },6000)
+        //  },6000)
         })
         .catch(function(error) {
           console.error("Erro ao enviar equipe:", error);
