--- a/archives.html
+++ b/archives.html
@@ -59,13 +59,19 @@
                 </div>
             </a><a class="text-white">
                 <div class="events position-relative">
-                    <span id="ans">CANAR</span>
+                    <span id="ans">Edição</span>
                     <div class="e-d position-absolute">
                         <ul>
                             <li class="y" id="y2022"> 2022</li>
                             <li class="y" id="y2021"> 2021</li>
                         </ul>
                     </div>
+                </div>
+            </a>
+
+            </a><a href="/sobre/">
+                <div>
+                    CANAR
                 </div>
             </a>
         </div>
@@ -85,13 +91,19 @@
                 </div>
             </a><a class="text-white">
                 <div class="events position-relative">
-                    <span id="ans">CANAR</span>
+                    <span id="ans">Edição</span>
                     <div class="e-d position-absolute">
                         <ul>
                             <li class="y" id="y2022"> 2022</li>
                             <li class="y" id="y2021"> 2021</li>
                         </ul>
                     </div>
+                </div>
+            </a>
+
+            </a><a href="/sobre/">
+                <div>
+                    CANAR
                 </div>
             </a>
         </div>
