--- a/index.html
+++ b/index.html
@@ -264,16 +264,14 @@
 
     }
 
-    @media (min-width: 100px) and (max-width: 394px) {
 
-        .canar {
-            height: 60vh;
-            background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(../img/champp.jpg);
-            background-repeat: repeat;
-            background-size: 100%;
-        }
-
+    .canar {
+        height: 75vh;
+        background: linear-gradient(90deg, #d4d001e6, #c6c905da), url(../img/champp.jpg);
+        background-repeat: repeat;
+        background-size: 100%;
     }
+
 
     @media (min-width: 501px) and (max-width: 700px) {
         .flex-wr {
@@ -522,13 +520,19 @@
             </a>
             <a class="text-white ans">
                 <div class="events position-relative">
-                    <span id="ans">CANAR</span>
+                    <span id="ans">Edição</span>
                     <div class="e-d position-absolute">
                         <ul>
                             <li class="y" id="y2022"> 2022</li>
                             <li class="y" id="y2021"> 2021</li>
                         </ul>
                     </div>
+                </div>
+            </a>
+
+            </a><a href="/sobre/">
+                <div>
+                    CANAR
                 </div>
             </a>
         </div>
