--- a/results.html
+++ b/results.html
@@ -97,7 +97,7 @@
         </div>
       </a><a class="text-white">
         <div class="events position-relative">
-          <span id="ans">CANAR</span>
+          <span id="ans">Edição</span>
           <div class="e-d position-absolute">
             <ul>
               <li class="y" id="y2022"> 2022</li>
