--- a/sobre/index.html
+++ b/sobre/index.html
@@ -180,7 +180,7 @@
                 <br>
                 <span class="text-secondary">Redes sociais</span> <br>
                 <div class="d-flex gap-3">
-                    <a href="">
+                    <a href="https://www.facebook.com/CANAR.FirstTeamAngola">
                         <i class="bi bi-facebook"></i>
                     </a>
                     
