--- a/sobre/index.html
+++ b/sobre/index.html
@@ -50,7 +50,7 @@
                 <div>
                     Home
                 </div>
-            </a><a class="ativo" href="../archives.html">
+            </a><a class="" href="../archives.html">
                 <div>
                     Arquivos
                 </div>
@@ -68,6 +68,10 @@
                         </ul>
                     </div>
                 </div>
+            </a><a class="ativo" href="./">
+                <div>
+                    CANAR
+                </div>
             </a>
         </div>
         <div style="display: none;" class=" container justify-center menu-cont gap-4 ">
@@ -76,7 +80,7 @@
                 <div>
                     Home
                 </div>
-            </a><a class="ativo" href="../archives.html">
+            </a><a class="" href="../archives.html">
                 <div>
                     Arquivos
                 </div>
