Last Commit day 07 / 06

--- a/archives.html
+++ b/archives.html
@@ -121,30 +121,141 @@
 
 
 
-    <main class="container">
+    <main class="px-2">
         <br>
 
         <div class="bg-light shadow p-4 rounded-2">
 
-            <h3 class="text-warning">Arquivos CANAR 2022</h3>
+            <h3 class="text-warning">Arquivos CANAR </h3>
             <hr class="bg-warning text-warning">
 
             <br><br>
-            <center><span class="text-secondary">No files</span></center>
-
+            <div class="row">
+                <div class="col-6 my-2 col-md-4 col-sm-6 col-lg-7 col-xl-4">
+                   <a href="./files 2021/1.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/1.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-6 col-lg-5 col-xl-4">
+                   <a href="./files 2021/2.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/2.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-5 col-lg-5 col-xl-4">
+                   <a href="./files 2021/3.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/3.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-7 col-lg-7 col-xl-4">
+                   <a href="./files 2021/4.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/4.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-8 col-lg-6 col-xl-4">
+                   <a href="./files 2021/5.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/5.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                   <a href="./files 2021/6.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/6.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-7 col-xl-4">
+                   <a href="./files 2021/7.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/7.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-5 col-xl-4">
+                   <a href="./files 2021/8.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/8.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                   <a href="./files 2021/9.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/9.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                   <a href="./files 2021/10.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/10.jpeg" alt=""></a>
+                </div>
+           
+                <div class="col-6 my-2 col-md-4 col-sm-6 col-lg-7 col-xl-4">
+                    <a href="./files 2021/21.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/21.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-6 col-lg-5 col-xl-4">
+                    <a href="./files 2021/22.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/22.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-5 col-lg-5 col-xl-4">
+                    <a href="./files 2021/23.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/23.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-7 col-lg-7 col-xl-4">
+                    <a href="./files 2021/24.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/24.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-8 col-lg-6 col-xl-4">
+                    <a href="./files 2021/25.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/25.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                    <a href="./files 2021/26.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/26.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-7 col-xl-4">
+                    <a href="./files 2021/27.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/27.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-5 col-xl-4">
+                    <a href="./files 2021/28.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/28.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                    <a href="./files 2021/29.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/29.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                    <a href="./files 2021/30.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/30.jpeg" alt=""></a>
+                 </div>
+            
+                <div class="col-6 my-2 col-md-4 col-sm-6 col-lg-7 col-xl-4">
+                    <a href="./files 2021/11.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/11.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-6 col-lg-5 col-xl-4">
+                    <a href="./files 2021/12.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/12.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-5 col-lg-5 col-xl-4">
+                    <a href="./files 2021/13.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/13.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-7 col-lg-7 col-xl-4">
+                    <a href="./files 2021/14.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/14.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-8 col-lg-6 col-xl-4">
+                    <a href="./files 2021/15.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/15.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                    <a href="./files 2021/16.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/16.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-7 col-xl-4">
+                    <a href="./files 2021/17.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/17.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-5 col-xl-4">
+                    <a href="./files 2021/18.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/18.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                    <a href="./files 2021/19.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/19.jpeg" alt=""></a>
+                 </div>
+                 <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                    <a href="./files 2021/20.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/20.jpeg" alt=""></a>
+                 </div>  <div class="col-6 my-2 col-md-4 col-sm-6 col-lg-7 col-xl-4">
+                   <a href="./files 2021/11.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/11.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-6 col-lg-5 col-xl-4">
+                   <a href="./files 2021/12.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/12.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-5 col-lg-5 col-xl-4">
+                   <a href="./files 2021/13.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/13.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-7 col-lg-7 col-xl-4">
+                   <a href="./files 2021/14.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/14.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-8 col-lg-6 col-xl-4">
+                   <a href="./files 2021/15.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/15.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                   <a href="./files 2021/16.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/16.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-7 col-xl-4">
+                   <a href="./files 2021/17.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/17.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-5 col-xl-4">
+                   <a href="./files 2021/18.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/18.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                   <a href="./files 2021/19.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/19.jpeg" alt=""></a>
+                </div>
+                <div class="col-6 my-2 col-md-4 col-sm-4 col-lg-6 col-xl-4">
+                   <a href="./files 2021/20.jpeg"> <img class="w-100 rounded-2 shadow" src="./files 2021/20.jpeg" alt=""></a>
+                </div>
+            </div>
         </div>
 
         <br>
-
-        <div class="bg-light shadow p-4 rounded-2">
-
-            <h3 class="text-warning">Arquivos CANAR 2021</h3>
-            <hr class="bg-warning text-warning">
-
-            <br><br>
-            <center><span class="text-secondary">No files</span></center>
-
-        </div>
 
 
 
