--- a/impact.html
+++ b/impact.html
@@ -540,15 +540,10 @@
         <div class="bg-warning " style="height: .6rem; width: 5rem; "></div>
         <br>
         <p>
-            Acompanhe a evolução tecnologica, o impacto a ser feito por meio da robótica, isto é , o campeonato. Lorem
-            ipsum dolor sit amet consectetur adipisicing elit. Maiores qui adipisci reiciendis tenetur unde delectus
-            earum accusantium, voluptatem numquam architecto quo, dicta facilis non reprehenderit provident mollitia ea
-            at iusto.
+            Acompanhe a evolução tecnologica, o impacto a ser feito por meio da robótica, isto é , o campeonato.
         </p>
 
     </main>
-    <br><br>
-    <br>
     <br>
     <div class="container d3">
         <div class="container ">
