--- a/archives.html
+++ b/archives.html
@@ -29,7 +29,7 @@
                         <img src="img/logos/cnr2.png" alt="" height="50em" class="navbar-brand">
                     </div>
                     <div class="mt-auto">
-                        <p class="text-xs font-thin"><a href="mailto:arotec.info@gmail.com">arotec.info@gmail.com</a>
+                            <p class="text-xs my-auto font-thin"><a  class="text-xs font-thin btn btn-danger" href="./sponsor">Patrocine</a>
                         </p>
                     </div>
                 </div>
